# agent-ops

./: .gitignore  AGENT_OPS_DEPLOY.md  CLAUDE.md  README.md  jazz.config.example.json  package.json  pyproject.toml
.claude/: settings.local.json
agentops/agents/: __init__.py  backend_dev.py  devops.py  frontend_dev.py
agentops/api/: __init__.py  server.py
agentops/core/: __init__.py  agent.py  llm_client.py  orchestrator.py  tools.py
agentops/integrations/: __init__.py  jazz_bridge.py
docs/: JAZZ_INTEGRATION.md
