[project]
name = "agentops"
version = "0.1.0"
description = "Production-ready multi-agent orchestration system following 12-Factor Agents methodology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Daryl Lundy", email = "daryllundy@users.noreply.github.com" }
]
keywords = [
    "ai",
    "agents",
    "llm",
    "orchestration",
    "12-factor",
    "multi-agent",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # For testing FastAPI
    "ruff>=0.7.0",
]

openai = [
    "openai>=1.0.0",
]

anthropic = [
    "anthropic>=0.39.0",
]

ollama = [
    "ollama>=0.3.0",
]

all = [
    "agentops[openai,anthropic,ollama]",
]

[project.urls]
Homepage = "https://github.com/daryllundy/agent-ops"
Repository = "https://github.com/daryllundy/agent-ops"
Issues = "https://github.com/daryllundy/agent-ops/issues"
Documentation = "https://github.com/daryllundy/agent-ops/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["agentops"]
